<resources>
    <string name="app_name">Hack BI Project</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="button">Button</string>
    <string name="splicer">SPLICER</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_math">Math</string>
    <string name="textview">TextView</string>
    <string name="calculus">Calculus</string>
    <string name="trigonometry">Trigonometry</string>
    <string name="geometry">Geometry</string>
    <string name="title_activity_english">English</string>
    <string name="syllabus">Syllabus</string>
    <string name="functions">Functions</string>
    <string name="math">Math</string>
    <string name="english">English</string>
    <string name="science">Science</string>
    <string name="title_activity_science">Science</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="earth_science">Earth Science</string>
    <string name="biology">Biology</string>
    <string name="choose_subject">Choose Subject</string>
    <string name="title_activity_history">History</string>
    <string name="history">History</string>
    <string name="american">American</string>
    <string name="world">World</string>
    <string name="european">European</string>
    <string name="MLA_format">MLA Format</string>
    <string name="Grammer">Grammar</string>
    <string name="English">English</string>
    <string name="title_activity_algebra">Algebra</string>
    <string name="algebra">Algebra</string>
    <string name="formula">Formula</string>
    <string name="tutoring">Tutoring</string>
    <string name="khan_academy">Khan Academy</string>
    <string name="msg">msg</string>
    <string name="title_activity_formula_algebra">FormulaAlgebra</string>
    <string name="title_activity_khan">khan</string>
    <string name="title_activity_formula_geometry">formulaGeometry</string>
    <string name="title_activity_calculus">Calculus</string>
    <string name="title_activity_formula_calculus">FormulaCalculus</string>
    <string name="title_activity_grammer">Grammer</string>
    <string name="title_activity_trigonometry">Trigonometry</string>
    <string name="title_activity_trigonometry_formula">TrigonometryFormula</string>
    <string name="title_activity_ml">MLA</string>
    <string name="title_activity_physics">Physics</string>
    <string name="title_activity_formula_physics">formulaPhysics</string>
    <string name="title_activity_chemistry">Chemistry</string>
</resources>
