<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Math"
    tools:showIn="@layout/activity_math">

    <TextView
        android:id="@+id/textView"
        android:layout_width="377dp"
        android:layout_height="82dp"
        android:layout_marginBottom="83dp"
        android:text="@string/math"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/Calculus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Math" />

    <Button
        android:id="@+id/Calculus"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/calculus"
        app:layout_constraintBottom_toTopOf="@+id/Geometry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/Geometry"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:text="@string/geometry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calculus" />

    <Button
        android:id="@+id/Algebra"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="4dp"
        android:onClick="AlgebraClick"
        android:text="@string/algebra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Geometry"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Trig"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="122dp"
        android:text="@string/trigonometry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Algebra" />

</android.support.constraint.ConstraintLayout>