<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Chemistry"
    tools:showIn="@layout/activity_chemistry">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="543dp"
        android:text="@string/chemistry"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="186dp"
        android:text="@string/formula"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="70dp"
        android:text="@string/tutoring"
        app:layout_constraintBottom_toTopOf="@+id/button21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button20"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="181dp"
        android:text="@string/khan_academy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="181dp"
        android:text="@string/msg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/button19" />
</android.support.constraint.ConstraintLayout>