<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Algebra"
    tools:showIn="@layout/activity_algebra">

    <TextView
        android:id="@+id/Algebra"
        android:layout_width="377dp"
        android:layout_height="82dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="40dp"
        android:text="@string/algebra"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/Formula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Formula"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="40dp"
        android:onClick="formulaClick"
        android:text="@string/formula"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Khan"
        app:layout_constraintEnd_toStartOf="@+id/Tutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Algebra" />

    <Button
        android:id="@+id/Tutor"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="40dp"
        android:text="@string/tutoring"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Formula"
        app:layout_constraintTop_toBottomOf="@+id/Algebra" />

    <Button
        android:id="@+id/Khan"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="190dp"
        android:onClick="khanClick"
        android:text="@string/khan_academy"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Formula" />

    <Button
        android:id="@+id/message"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="190dp"
        android:text="@string/msg"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Khan"
        app:layout_constraintTop_toBottomOf="@+id/Tutor"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>