<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".History"
    tools:showIn="@layout/activity_history">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="375dp"
        android:layout_height="82dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="4dp"
        android:text="@string/history"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/world"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        android:text="@string/world"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/european"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/american" />

    <Button
        android:id="@+id/american"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        android:text="@string/american"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/world"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/european"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="147dp"
        android:text="@string/european"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/world" />

</android.support.constraint.ConstraintLayout>